--- a/style.css
+++ b/style.css
@@ -729,7 +729,10 @@ h3 {
       font-size: 12px;
         }
     
-    #vr 
+   #vr{
+    height: 100px;
+    margin: 16px;
+} 
   .welcome{
       margin-top: 60px;
     }
